--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       // ==== Đèn lồng + Lời chúc ====
       const lanternContainer = document.getElementById("lantern-container");
       const wishes = [
-        "Chúc Trung Thu vui vẻ!",
+        "Trung Thu vui vẻ!",
         "Gia đình hạnh phúc!",
         "Mong ước thành hiện thực!",
       ];
@@ -313,7 +313,7 @@
       ${message}
       ${
         isGift
-          ? '<br><a href="./qua.html" class="gift-button">🎁 Nhấn vào đây để nhận quà</a>'
+          ? '<br><a href="./thu.html" class="gift-button">🎁 Nhấn vào đây để nhận quà</a>'
           : ""
       }
     </div>
